# Lab7

./: CMakeLists.txt  googltest.cpp  main.cpp
include/: BattleSystem.h  ConsoleLogger.h  FileLogger.h  Knight.h  NPC.h  NPCFactory.h  Observer.h  SlaveTrader.h  Squirrel.h
